tests/macro-tests/cases/widget_new/incorrect_arg_type6.stderr
error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/widget_new/incorrect_arg_type6.rs:18:23
   |
18 |             simple_b: true,
   |             --------  ^^^^ the trait `IntoVar<u32>` is not implemented for `bool`
   |             |
   |             required by a bound introduced by this call
   |
   = note: `IntoVar<T>` is implemented for all `T: VarValue`
   = note: `IntoVar<T>` is implemented for `Var<T>`, `ContextVar<T>` and others
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `simple_type_inputs__::simple_b`
  --> cases/widget_new/incorrect_arg_type6.rs:8:84
   |
8  | pub fn simple_type(child: impl UiNode, simple_a: impl IntoVar<u32>, simple_b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                                    ^^^^^^^^^^^^ required by this bound in `simple_type_inputs__::simple_b`
